--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "axios": "^0.18.0"
   },
   "scripts": {
-    "debug": "codeceptjs run --verbose --steps --grep @api",
+    "debug": "codeceptjs run --verbose --grep @api",
+    "test": "codeceptjs run --steps --grep @api",
     "stop-containers": "docker stop devowelizer || true && docker rm devowelizer || true",
     "docker-service": "docker run -tid --name devowelizer -p 8080:8080 -it casumo/devowelizer:latest -d || true",
-    "test": "npm run stop-containers && npm run docker-service && npm run debug"
+    "docker-test": "npm run stop-containers && npm run docker-service && npm run debug"
   },
   "dependencies": {
     "assert": "^1.4.1",
@@ -21,6 +22,7 @@
     "mocha-multi": "^1.0.1",
     "mocha": "^5.2.0",
     "set-cookie-parser": "^2.3.5",
-    "sync-request": "^6.0.0"
+    "sync-request": "^6.0.0",
+    "http-status-codes": "^1.3.2"
   }
 }
