--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devowelizer api testing",
+  "name": "devowelizer",
   "version": "1.0.0",
   "devDependencies": {
     "codeceptjs": "2.1.2",
